[package]
name = "orion-sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel_serv"
path = "src/app/serv.rs"


[workspace]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
winnow = "0.6"


[dependencies]
async-trait = "0.1"
derive-getters = "0.5"
derive_builder = "0.20"
err-derive = "0.3"
thiserror = "2.0"
lazy_static = "1.4"
log = "0.4"
mockall = "0.13"
regex = "1.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
sqlparser = "0.45"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
